--- a/addons/sourcemod/translations/kztimer.phrases.txt
+++ b/addons/sourcemod/translations/kztimer.phrases.txt
@@ -383,33 +383,33 @@
 	}
 	"MapFinished0"
 	{
-		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:s},{8:c},{9:c},{10:i},{11:c},{12:c},{13:c},{14:i},{15:c},{16:i},{17:c},{18:s},{19:c}"
-		"en"        "[{1}KZ{2}] {3}{4}{5} finished with a tp time of ({6}{7}{8}, TP's: {9}{10}{11}). {12}[rank {13}#{14}{15}/{16} | record {17}{18}{19}]"
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:c},{8:c},{9:s},{10:c},{11:c},{12:i},{13:c},{14:c},{15:c},{16:i},{17:c},{18:i},{19:c},{20:s},{21:c}"
+		"en"        "[{1}KZ{2}] {3}{4}{5} finished with a {6}TP TIME{7} of ({8}{9}{10}, TP's: {11}{12}{13}). {14}[rank {15}#{16}{17}/{18} | record {19}{20}{21}]"
 	}
 	"MapFinished1"
 	{
-		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:s},{8:c},{9:c},{10:c},{11:i},{12:c},{13:i},{14:c},{15:s},{16:c}"
-		"en"        "[{1}KZ{2}] {3}{4}{5} finished with a pro time of ({6}{7}{8}). {9}[rank {10}#{11}{12}/{13} | record {14}{15}{16}]"
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:c},{8:c},{9:s},{10:c},{11:c},{12:c},{13:i},{14:c},{15:i},{16:c},{17:s},{18:c}"
+		"en"        "[{1}KZ{2}] {3}{4}{5} finished with a {6}PRO TIME{7} of ({8}{9}{10}). {11}[rank {12}#{13}{14}/{15} | record {16}{17}{18}]"
 	}
 	"MapFinished2"
 	{
-		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:s},{8:c},{9:c},{10:i},{11:c},{12:c},{13:s},{14:c},{15:c},{16:c},{17:i},{18:c},{19:i},{20:c},{21:s},{22:c}"
-		"en"        "[{1}KZ{2}] {3}{4}{5} finished with a tp time of ({6}{7}{8}, TP's: {9}{10}{11}). Improving their best time by ({12}{13}{14}). {15}[rank {16}#{17}{18}/{19} | record {20}{21}{22}]"
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:c},{8:c},{9:s},{10:c},{11:c},{12:i},{13:c},{14:c},{15:s},{16:c},{17:c},{18:c},{19:i},{20:c},{21:i},{22:c},{23:s},{24:c}"
+		"en"        "[{1}KZ{2}] {3}{4}{5} finished with a {6}TP TIME{7} of ({8}{9}{10}, TP's: {11}{12}{13}). Improving their best time by ({14}{15}{16}). {17}[rank {18}#{19}{20}/{21} | record {22}{23}{24}]"
 	}
 	"MapFinished3"
 	{
-		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:s},{8:c},{9:c},{10:s},{11:c},{12:c},{13:c},{14:i},{15:c},{16:i},{17:c},{18:s},{19:c}"
-		"en"        "[{1}KZ{2}] {3}{4}{5} finished with a pro time of ({6}{7}{8}). Improving their best time by ({9}{10}{11}). {12}[rank {13}#{14}{15}/{16} | record {17}{18}{19}]"
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:c},{8:c},{9:s},{10:c},{11:c},{12:s},{13:c},{14:c},{15:c},{16:i},{17:c},{18:i},{19:c},{20:s},{21:c}"
+		"en"        "[{1}KZ{2}] {3}{4}{5} finished with a {6}PRO TIME{7} of ({8}{9}{10}). Improving their best time by ({11}{12}{13}). {14}[rank {15}#{16}{17}/{18} | record {19}{20}{21}]"
 	}
 	"MapFinished4"
 	{
-		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:s},{8:c},{9:c},{10:i},{11:c},{12:c},{13:s},{14:c},{15:c},{16:c},{17:i},{18:c},{19:i},{20:c},{21:s},{22:c}"
-		"en"        "[{1}KZ{2}] {3}{4}{5} finished with a tp time of ({6}{7}{8}, TP's: {9}{10}{11}). Missing their best time by ({12}{13}{14}). {15}[rank {16}#{17}{18}/{19} | record {20}{21}{22}]"
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:c},{8:c},{9:s},{10:c},{11:c},{12:i},{13:c},{14:c},{15:s},{16:c},{17:c},{18:c},{19:i},{20:c},{21:i},{22:c},{23:s},{24:c}"
+		"en"        "[{1}KZ{2}] {3}{4}{5} finished with a {6}TP TIME{7} of ({8}{9}{10}, TP's: {11}{12}{13}). Missing their best time by ({14}{15}{16}). {17}[rank {18}#{19}{20}/{21} | record {22}{23}{24}]"
 	}
 	"MapFinished5"
 	{
-		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:s},{8:c},{9:c},{10:s},{11:c},{12:c},{13:c},{14:i},{15:c},{16:i},{17:c},{18:s},{19:c}"
-		"en"        "[{1}KZ{2}] {3}{4}{5} finished with a pro time of ({6}{7}{8}). Missing their best time by ({9}{10}{11}). {12}[rank {13}#{14}{15}/{16} | record {17}{18}{19}]"
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:c},{8:c},{9:s},{10:c},{11:c},{12:s},{13:c},{14:c},{15:c},{16:i},{17:c},{18:i},{19:c},{20:s},{21:c}"
+		"en"        "[{1}KZ{2}] {3}{4}{5} finished with a {6}PRO TIME{7} of ({8}{9}{10}). Missing their best time by ({11}{12}{13}). {14}[rank {15}#{16}{17}/{18} | record {19}{20}{21}]"
 	}
 	"BeatPersonalProRecord"
 	{
