--- a/addons/sourcemod/translations/kztimer.phrases.txt
+++ b/addons/sourcemod/translations/kztimer.phrases.txt
@@ -1,5 +1,10 @@
 ﻿"Phrases"
 {
+	"TimerStartReminder"
+	{	
+		"#format"   ""
+		"en"        " \n<font color='#c73030' size='24'><b> Don't forget to start the timer!</b></font>"
+	}
 	"TimeleftCounter"
 	{
 	
@@ -54,7 +59,7 @@
 	"LJblock4"
 	{
 		"#format"   "{1:c},{2:c},{3:c}"
-		"en"        "[{1}KZ{2}] {3}Invalid destination (location dispatched)"
+		"en"        "[{1}KZ{2}] {3}Invalid destination"
 	}
 	"LJblock5"
 	{
@@ -89,7 +94,7 @@
 	"TeamJoin"
 	{
 		"#format"   "{1:N},{2:s}"
-		"en"       "Player {1:N} joined {2:s}"
+		"en"       "Player {1} joined {2}"
 	}
 	"JumpPenalty3"
 	{
@@ -156,12 +161,6 @@
 		"#format"   "{1:c},{2:c}"
 		"en"        "[{1}KZ{2}] Info: JumpStats disabled!"
 	}
-	"TimerStartReminder"
-	{
-	
-		"#format"   ""
-		"en"        " \n<font color='#c73030' size='24'><b> Don't forget to start the timer!</b></font>"
-	}
 	"noJumpRecords"
 	{
 		"#format"   "{1:c},{2:c}"
@@ -171,12 +170,12 @@
 	"Challenge1"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:i},{6:s}"
-		"en"        "[{1}KZ{2}] {3}Challenge request sent to {4} (Bet: {5}, Checkpoints{6})"
+		"en"        "[{1}KZ{2}] {3}Challenge request sent to {4} (Bet: {5}p, Checkpoints{6})"
 	}
 	"Challenge2"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:i},{8:s}"
-		"en"        "[{1}KZ{2}] {3}{4} challenged you. You have 20 seconds to {5}!accept{6} ({7} Points, Checkpoints {8})"
+		"en"        "[{1}KZ{2}] {3}{4} challenged you. You have 20 seconds to {5}!accept{6} (Bet: {7}p, Checkpoints {8})"
 	}
 	"Challenge3"
 	{
@@ -197,7 +196,7 @@
 	"ChallengeFailed2"
 	{
 		"#format"   "{1:c},{2:c}"
-		"en"        "[{1}KZ{2}] You must be alive to start a challenege."
+		"en"        "[{1}KZ{2}] You must be alive to start a challenge."
 	}
 	"ChallengeFailed3"
 	{
@@ -242,7 +241,7 @@
 	"ChallengeRequestExpired"
 	{
 		"#format"   "{1:c},{2:c}"
-		"en"        "[{1}KZ{2}] %cChallenge request expired!"
+		"en"        "[{1}KZ{2}] Challenge request expired!"
 	}
 	"ChallengeWon"
 	{
@@ -252,7 +251,7 @@
 	"ChallengeAborted"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c}"
-		"en"        "[{1}KZ{2}] Challenge versus {3:c}{4:s}{5:c} aborted."
+		"en"        "[{1}KZ{2}] Challenge versus {3}{4}{5} aborted."
 	}
 	"SkillGroup"
 	{
@@ -272,12 +271,12 @@
 	"EarnedPoints"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:i},{8:c},{9:c},{10:i},{11:c}"
-		"en"        "[{1}KZ{2}] {3}{4}{5} has earned {6}{7} points{8} [{9}{10}{11} Total]"
+		"en"        "[{1}KZ{2}] {3}{4}{5} has earned {6}{7} exp. points{8} [{9}{10}{11} Total]"
 	}
 	"LostPoints"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:i},{8:c},{9:c},{10:i},{11:c}"
-		"en"        "[{1}KZ{2}] {3}{4}{5} has lost {6}{7} points{8} [{9}{10}{11} Total]"
+		"en"        "[{1}KZ{2}] {3}{4}{5} has lost {6}{7} exp. points{8} [{9}{10}{11} Total]"
 	}
 
 	"ChallengeW"
@@ -289,7 +288,7 @@
 	"ChallengeL"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:i},{8:c}"
-		"en"        "[{1}KZ{2}] {3}{4}{5} has lost {6}{7} {8}points!"
+		"en"        "[{1}KZ{2}] {3}{4}{5} has lost {6}{7} {8} exp. points!"
 	}
 	"NoReplayFound"
 	{
@@ -316,11 +315,6 @@
 		"#format"   "{1:c},{2:c}"
 		"en"        "[{1}KZ{2}] Recalculating player rankings. This may take a while, please wait!"
 	}
-	"PrUpdateStarted2"
-	{
-		"#format"   "{1:c},{2:c},{3:c}"
-		"en"        "[{1}KZ{2}] {3}(1/2) Player rankings recalculated. Datebase is updating!"
-	}
 	"PrUpdateFinished"
 	{
 		"#format"   "{1:c},{2:c},{3:c}"
@@ -335,11 +329,6 @@
 	{
 		"#format"   "{1:c},{2:c}"
 		"en"        "[{1}KZ{2}] Recalculation stopped!"
-	}
-	"HelpText"
-	{
-		"#format"   "{1:c},{2:c},{3:c},{4:s}"
-		"en"        "[{1}KZ{2}] For help, type {3}!helpmenu{4} in chat"
 	}
 	"SteamGroup"
 	{
@@ -411,16 +400,6 @@
 		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:c},{8:c},{9:s},{10:c},{11:c},{12:s},{13:c},{14:c},{15:c},{16:i},{17:c},{18:i},{19:c},{20:s},{21:c}"
 		"en"        "[{1}KZ{2}] {3}{4}{5} finished with a {6}PRO TIME{7} of ({8}{9}{10}). Missing their best time by ({11}{12}{13}). {14}[rank {15}#{16}{17}/{18} | record {19}{20}{21}]"
 	}
-	"BeatPersonalProRecord"
-	{
-		"#format"   "{1:c},{2:c},{3:c},{4:s}"
-		"en"        "[{1}KZ{2}] {3}You beat your personal best(pro) of {4}"
-	}
-	"BeatPersonalTpRecord"
-	{
-		"#format"   "{1:c},{2:c},{3:c},{4:s}"
-		"en"        "[{1}KZ{2}] {3}You beat your personal best(tp) of {4}"
-	}
 	"NoClipUnlocked"
 	{
 		"#format"   "{1:c},{2:c},{3:c}"
@@ -430,11 +409,6 @@
 	{
 		"#format"   "{1:c},{2:c},{3:s}"
 		"en"        "[{1}KZ{2}] Player {3} not found in local database."
-	}
-	"PlayerNotFound2"
-	{
-		"#format"   "{1:c},{2:c},{3:s}"
-		"en"        "[{1}KZ{2}] Player {3} not found."
 	}
 	"ConsoleOutput"
 	{
@@ -489,7 +463,7 @@
 	"NoclipNotAvailable2"
 	{
 		"#format"   "{1:c},{2:c},{3:s}"
-		"en"        "[{1}KZ{2}] You must finish the map or be ranked as {3:s}, MAPPER, VIP or ADMIN to use +noclip"
+		"en"        "[{1}KZ{2}] You must finish the map or be ranked as {3}, MAPPER, VIP or ADMIN to use +noclip"
 	}
 	"NoclipNotAvailable3"
 	{
@@ -580,11 +554,6 @@
 	{
 		"#format"   "{1:c},{2:c}"
 		"en"        "[{1}KZ{2}] Speed meter disabled."
-	}
-	"SpeedMeter3"
-	{
-		"#format"   "{1:c},{2:c}"
-		"en"        "[{1}KZ{2}] You must be alive to activate your speed meter."
 	}
 	"TimerStopped1"
 	{
@@ -786,16 +755,6 @@
 		"#format"   "{1:c},{2:c}"
 		"en"        "[{1}KZ{2}] Goto me disabled."
 	}
-	"ShowNames1"
-	{
-		"#format"   "{1:c},{2:c}"
-		"en"        "[{1}KZ{2}] Target name panel enabled."
-	}
-	"ShowNames2"
-	{
-		"#format"   "{1:c},{2:c}"
-		"en"        "[{1}KZ{2}] Target name panel disabled."
-	}
 	"Colorchat1"
 	{
 		"#format"   "{1:c},{2:c}"
@@ -805,16 +764,6 @@
 	{
 		"#format"   "{1:c},{2:c}"
 		"en"        "[{1}KZ{2}] Colorchat disabled."
-	}
-	"JumpPenalty1"
-	{
-		"#format"   "{1:c},{2:c}"
-		"en"        "[{1}KZ{2}] Jump penalty enabled."
-	}
-	"JumpPenalty2"
-	{
-		"#format"   "{1:c},{2:c}"
-		"en"        "[{1}KZ{2}] Jump penalty disabled."
 	}
 	"Info1"
 	{
@@ -921,11 +870,6 @@
 		"#format"   "{1:c},{2:c},{3:c},{4:c}"
 		"en"        "[{1}KZ{2}] For help, type {3}!helpmenu{4} in chat"
 	}
-	"ChallengeMsg"
-	{
-		"#format"   "{1:c},{2:c},{3:c},{4:c}"
-		"en"        "[{1}KZ{2}] You can {3:c}!challenge{4:c} other players and start a run against them. The player who finishs the map first wins the challenge!"
-	}
 	"Disconnected1"
 	{
 		"#format"   "{1:c},{2:c},{3:s},{4:c},{5:s}"
@@ -940,5 +884,181 @@
 	{
 		"#format"   "{1:c},{2:c},{3:s},{4:c}"
 		"en"       "{1}Player {2}{3}{4} connected."
+	}
+	"Bhop1"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:.3f},{5:c},{6:c},{7:.3f},{8:c},{9:c},{10:c}"
+		"en"       "[{1}KZ{2}] Your Prestrafe is too high. ({3}{4}{5}/{6}{7}{8} max) {9}Bhop{10}"
+	}
+	"DropBhop1"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:.1f},{5:c},{6:c},{7:c},{8:c},{9:c}"
+		"en"       "[{1}KZ{2}] You fell too far. ({3}{4}{5}/{6}132.0{7} max) {8}DropBhop{9}"
+	}	
+	"DropBhop2"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:.3f},{5:c},{6:c},{7:.3f},{8:c},{9:c},{10:c}"
+		"en"       "[{1}KZ{2}] Your Prestrafe is too high. ({3}{4}{5}/{6}{7}{8} max) {9}DropBhop{10}"
+	}
+	"Wj1"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:.1f},{5:c},{6:c},{7:c},{8:c},{9:c}"
+		"en"       "[{1}KZ{2}] You fell too far. ({3}{4}{5}/{6}132.0{7} max) {8}WJ{9}"
+	}	
+	"Wj2"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:.3f},{5:c},{6:c},{7:c},{8:c},{9:c}"
+		"en"       "[{1}KZ{2}] Your Prestrafe is too high. ({3}{4}{5}/{6}300.0{7} max) {8}WJ{9}"
+	}
+	"ClimbersMenu1"
+	{
+		"#format"   "{1:i}"
+		"en"       "Checkpoint #{1}"
+	}
+	"ClimbersMenu2"
+	{
+		"#format"   "{1:i}"
+		"en"       "Teleport #{1}"
+	}
+	"ClimbersMenu3"
+	{
+		"en"       "Prev CP"
+	}
+	"ClimbersMenu4"
+	{
+		"en"       "Next CP"
+	}
+	"ClimbersMenu5"
+	{
+		"en"       "Undo TP"
+	}
+	"ClimbersMenu6"
+	{
+		"en"       "Pause"
+	}
+	"ClimbersMenu7"
+	{
+		"en"       "Pause - ON"
+	}
+	"ClimbersMenu8"
+	{
+		"en"       "Start"
+	}
+	"ClimbersMenu9"
+	{
+		"en"       "Options"
+	}
+	"ClimbersMenu10"
+	{
+		"#format"   "{1:s},{2:.1f}"
+		"en"       "{1}\nSpeed: {2} u/s"
+	}
+	"ClimbersMenu11"
+	{
+		"en"       "Checkpoint"
+	}
+	"ClimbersMenu12"
+	{
+		"en"       "Teleport"
+	}										
+	"ClientLongJump1"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:.2f},{5:c},{6:i},{7:c},{8:c},{9:.0f},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:i},{19:c},{20:c},{21:s}"
+		"en"       "[{1}KZ{2}] {3}LJ: {4} units [{5}{6}{7} Strafes | {8}{9}{10} Pre | {11}{12}{13} Max | {14}{15}{16} Height | {17}{18}{19}{20} Sync]{21}"
+	}
+	"ClientLongJump2"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:.2f},{5:c},{6:i},{7:c},{8:c},{9:.0f},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:i},{19:c},{20:c},{21:s}"
+		"en"       "[{1}KZ{2}] {3}LJ: {4} units [{5}{6}{7} Strafes | {8}{9}{10} TakeOff | {11}{12}{13} Max | {14}{15}{16} Height | {17}{18}{19}{20} Sync]{21}"
+	}
+	"ClientLongJump3"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:.2f},{7:c},{8:c},{9:i},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:.0f},{19:c},{20:c},{21:i},{22:c},{23:c},{24:s}"
+		"en"       "[{1}KZ{2}] {3}LJ{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Height | {20}{21}{22}{23} Sync]{24}"
+	}
+	"ClientLongJump4"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:.2f},{7:c},{8:c},{9:i},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:.0f},{19:c},{20:c},{21:i},{22:c},{23:c},{24:s}"
+		"en"       "[{1}KZ{2}] {3}LJ{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} TakeOff | {14}{15}{16} Max | {17}{18}{19} Height | {20}{21}{22}{23} Sync]{24}"
+	}	
+	"ClientMultiBhop1"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:.2f},{5:c},{6:i},{7:c},{8:c},{9:.0f},{10:c}{11:c},{12:i},{13:c},{14:c}"
+		"en"       "[{1}KZ{2}] {3}MultiBhop: {4} units [{5}{6}{7} Strafes | {8}{9}{10} Pre | {11}{12}{13}{14} Sync]"
+	}
+	"ClientMultiBhop2"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:.2f},{7:c},{8:c},{9:i},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:.0f},{19:c},{20:c},{21:s},{22:c},{23:c},{24:i},{25:c},{26:c}"
+		"en"       "[{1}KZ{2}] {3}MultiBhop{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Height | {20}{21}{22} Bhops | {23}{24}{25}{26} Sync]"
+	}
+	"ClientDropBhop1"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:.2f},{5:c},{6:i},{7:c},{8:c},{9:.0f},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:i},{16:c},{17:c}"
+		"en"       "[{1}KZ{2}] {3}DropBhop: {4} units [{5}{6}{7} Strafes | {8}{9}{10} Pre | {11}{12}{13} Height | {14}{15}{16}{17} Sync]"
+	}
+	"ClientDropBhop2"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:.2f},{7:c},{8:c},{9:i},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:.0f},{19:c},{20:c},{21:i},{22:c},{23:c}"
+		"en"       "[{1}KZ{2}] {3}DropBhop{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Height | {20}{21}{22}{23} Sync]"
+	}
+	"ClientWeirdJump1"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:.2f},{5:c},{6:i},{7:c},{8:c},{9:.0f},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:i},{16:c},{17:c}"
+		"en"       "[{1}KZ{2}] {3}WJ: {4} units [{5}{6}{7} Strafes | {8}{9}{10} Pre | {11}{12}{13} Height | {14}{15}{16}{17} Sync]"
+	}
+	"ClientWeirdJump2"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:.2f},{7:c},{8:c},{9:i},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:.0f},{19:c},{20:c},{21:i},{22:c},{23:c}"
+		"en"       "[{1}KZ{2}] {3}WJ{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Height | {20}{21}{22}{23} Sync]"
+	}
+	"ClientBunnyhop1"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:.2f},{5:c},{6:i},{7:c},{8:c},{9:.0f},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:i},{16:c},{17:c}"
+		"en"       "[{1}KZ{2}] {3}Bhop: {4} units [{5}{6}{7} Strafes | {8}{9}{10} Pre | {11}{12}{13} Height | {14}{15}{16}{17} Sync]"
+	}
+	"ClientBunnyhop2"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:.2f},{7:c},{8:c},{9:i},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:.0f},{19:c},{20:c},{21:i},{22:c},{23:c}"
+		"en"       "[{1}KZ{2}] {3}Bhop{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Height | {20}{21}{22}{23} Sync]"
+	}
+	"ProRecord"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:s},{6:s}"
+		"en"        "[{1}KZ{2}] {3}PRO RECORD{4}: {5} ({6})"
+	}
+	"TpRecord"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:s},{6:s}"
+		"en"        "[{1}KZ{2}] {3}TP RECORD{4}: {5} ({6})"
+	}
+	"GlobalRecord1"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:s},{6:s}"
+		"en"        "[{1}KZ{2}] {3}GLOBAL RECORD (64){4}: {5} ({6})"
+	}
+	"GlobalRecord2"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:s},{6:s}"
+		"en"        "[{1}KZ{2}] {3}GLOBAL RECORD (102){4}: {5} ({6})"
+	}
+	"GlobalRecord3"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:s},{6:s}"
+		"en"        "[{1}KZ{2}] {3}GLOBAL RECORD (128){4}: {5} ({6})"
+	}
+	"GlobalRecord4"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:s},{6:s}"
+		"en"        "[{1}KZ{2}] {3}GLOBAL RECORD (ProMode){4}: {5} ({6})"
+	}
+	"LanguageSwitch"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:c}"
+		"en"        "[{1}KZ{2}] Type {3}!language{4} in chat to select a different language"
+	}
+	"LjBlock"
+	{
+		"#format"   "{1:c},{2:c},{3:i},{4:c}"
+		"en"        " {1}[{2}{3} block{4}]"
 	}
 }
