--- a/addons/sourcemod/translations/de/kztimer.phrases.txt
+++ b/addons/sourcemod/translations/de/kztimer.phrases.txt
@@ -330,11 +330,6 @@
 		"#format"   "{1:c},{2:c}"
 		"de"        "[{1}KZ{2}] Neuberechnung der Spielerpunkte gestoppt!"
 	}
-	"SteamGroup"
-	{
-		"#format"   "{1:c},{2:c}"
-		"de"        "[{1}KZ{2}] http://steamcommunity.com/groups/kztimer"
-	}
 	"NewGlobalRecord102Pro"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c}"
@@ -940,15 +935,25 @@
 		"#format"   "{1:c},{2:c},{3:c},{4:.3f},{5:c},{6:c},{7:c},{8:c},{9:c}"
 		"de"       "[{1}KZ{2}] Dein Prestrafe ist zu hoch. ({3}{4}{5}/{6}300.0{7} max) {8}WJ{9}"
 	}
-	"ClimbersMenu1"
+	"ClimbersMenu1_1"
 	{
 		"#format"   "{1:i}"
 		"de"       "Checkpoint #{1}"
 	}
-	"ClimbersMenu2"
+	"ClimbersMenu2_1"
 	{
 		"#format"   "{1:i}"
 		"de"       "Teleport #{1}"
+	}
+	"ClimbersMenu1_2"
+	{
+		"#format"   "{1:i}"
+		"de"       "CP #{1}"
+	}
+	"ClimbersMenu2_2"
+	{
+		"#format"   "{1:i}"
+		"de"       "TP #{1}"
 	}
 	"ClimbersMenu3"
 	{
@@ -990,6 +995,14 @@
 	"ClimbersMenu12"
 	{
 		"de"       "Teleport"
+	}
+	"ClimbersMenu13"
+	{
+		"de"       "CP"
+	}
+	"ClimbersMenu14"
+	{
+		"de"       "TP"
 	}
 	"ClientLongJump1"
 	{
