--- a/addons/sourcemod/translations/kztimer.phrases.txt
+++ b/addons/sourcemod/translations/kztimer.phrases.txt
@@ -39,7 +39,7 @@
 	{
 	
 		"#format"   "{1:s}"
-		"en"        "<b>Timer stopped.</b>\nYou finished the map in: <font color='#86D53B'>{1}</font>\n<font size='22'>Congratulations!</font>"
+		"en"        "<font size='22'>Congratulations!</font>\nYou finished the map in: <font color='#86D53B'>{1}</font>"
 	}
 	"LJblock1"
 	{
@@ -863,7 +863,7 @@
 	"HelpMsg"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:c}"
-		"en"        "[{1}KZ{2}] For help, type {3}!helpmenu{4} in chat"
+		"en"        "[{1}KZ{2}] Type {3}!help{4} in chat to get a list of KZTimer commands"
 	}
 	"Disconnected1"
 	{
@@ -905,15 +905,25 @@
 		"#format"   "{1:c},{2:c},{3:c},{4:.3f},{5:c},{6:c},{7:c},{8:c},{9:c}"
 		"en"       "[{1}KZ{2}] Your Prestrafe is too high. ({3}{4}{5}/{6}300.0{7} max) {8}WJ{9}"
 	}
-	"ClimbersMenu1"
+	"ClimbersMenu1_1"
 	{
 		"#format"   "{1:i}"
 		"en"       "Checkpoint #{1}"
 	}
-	"ClimbersMenu2"
+	"ClimbersMenu2_1"
 	{
 		"#format"   "{1:i}"
 		"en"       "Teleport #{1}"
+	}
+	"ClimbersMenu1_2"
+	{
+		"#format"   "{1:i}"
+		"en"       "CP #{1}"
+	}
+	"ClimbersMenu2_2"
+	{
+		"#format"   "{1:i}"
+		"en"       "TP #{1}"
 	}
 	"ClimbersMenu3"
 	{
@@ -955,7 +965,15 @@
 	"ClimbersMenu12"
 	{
 		"en"       "Teleport"
-	}										
+	}	
+	"ClimbersMenu13"
+	{
+		"en"       "CP"
+	}
+	"ClimbersMenu14"
+	{
+		"en"       "TP"
+	}	
 	"ClientLongJump1"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:.2f},{5:c},{6:i},{7:c},{8:c},{9:.0f},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:i},{19:c},{20:c},{21:s}"
