--- a/addons/sourcemod/translations/sv/kztimer.phrases.txt
+++ b/addons/sourcemod/translations/sv/kztimer.phrases.txt
@@ -330,11 +330,6 @@
 		"#format"   "{1:c},{2:c}"
 		"sv"        "[{1}KZ{2}] Omberäkning stoppad!"
 	}
-	"SteamGroup"
-	{
-		"#format"   "{1:c},{2:c}"
-		"sv"        "[{1}KZ{2}] http://steamcommunity.com/groups/kztimer"
-	}
 	"NewGlobalRecord102Pro"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c}"
@@ -910,15 +905,25 @@
 		"#format"   "{1:c},{2:c},{3:c},{4:.3f},{5:c},{6:c},{7:c},{8:c},{9:c}"
 		"sv"       "[{1}KZ{2}] Din Prestrafe är för hög. ({3}{4}{5}/{6}300.0{7} max) {8}WJ{9}"
 	}
-	"ClimbersMenu1"
+	"ClimbersMenu1_1"
 	{
 		"#format"   "{1:i}"
 		"sv"       "Checkpoint #{1}"
 	}
-	"ClimbersMenu2"
+	"ClimbersMenu2_1"
 	{
 		"#format"   "{1:i}"
 		"sv"       "Teleport #{1}"
+	}
+	"ClimbersMenu1_2"
+	{
+		"#format"   "{1:i}"
+		"sv"       "CP #{1}"
+	}
+	"ClimbersMenu2_2"
+	{
+		"#format"   "{1:i}"
+		"sv"       "TP #{1}"
 	}
 	"ClimbersMenu3"
 	{
@@ -960,7 +965,15 @@
 	"ClimbersMenu12"
 	{
 		"sv"       "Teleport"
-	}										
+	}
+	"ClimbersMenu13"
+	{
+		"sv"       "CP"
+	}
+	"ClimbersMenu14"
+	{
+		"sv"       "TP"
+	}	
 	"ClientLongJump1"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:.2f},{5:c},{6:i},{7:c},{8:c},{9:.0f},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:i},{19:c},{20:c},{21:s}"
