--- a/addons/sourcemod/translations/ru/kztimer.phrases.txt
+++ b/addons/sourcemod/translations/ru/kztimer.phrases.txt
@@ -1,5 +1,25 @@
 ﻿"Phrases"
 {
+	 "PlayerJumpBeam1"
+	{
+		"#format"   "{1:c},{2:c}"
+		"ru"        "[{1}KZ{2}] Подсветка прыжка включена."
+	}
+	"PlayerJumpBeam2"
+	{
+		"#format"   "{1:c},{2:c}"
+		"ru"        "[{1}KZ{2}] Подсветка прыжка выключена."
+	}
+	"AvgTime"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:s},{7:i},{8:c},{9:c},{10:s},{11:i}"
+		"ru"        "[{1}KZ{2}] {3}{4}Среднее PRO время{5}: {6} ({7}) {8}Среднее TP время{9}: {10} ({11})"
+	}
+	"ClientLongJumpBlockFailstats"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:.2f},{7:c},{8:c},{9:i},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:.0f},{19:c},{20:c},{21:i},{22:c},{23:c},{24:c},{25:.3f},{26:c},{27:s}"
+		"ru"       "[{1}KZ{2}] {3}Дистанция{4}: {5}{6} юниты{7} [{8}{9}{10} Стрейфов | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Высота | {20}{21}{22}{23} Синхронизация | {24}{25}{26} JumpOff край]{27}"
+	}
 	"TimeleftCounter"
 	{
 	
@@ -23,13 +43,13 @@
 	{
 	
 		"#format"   "{1:s},{2:s}"
-		"ru"        "<b>Таймер перезапущен</b>\n<font color='#AB79DC'><b>Pro</b></font>: {1}\n<font color='#D3CE6D'><b>TP</b></font>: {2}"
+		"ru"        "<b>Таймер перезапущен</b>\n<font color='#4A66FC'><b>Pro</b></font>: {1}\n<font color='#D3CE6D'><b>TP</b></font>: {2}"
 	}
 	"TimerStarted2"
 	{
 	
 		"#format"   "{1:s},{2:s}"
-		"ru"        "<b>Таймер запущен</b>\n<font color='#AB79DC'><b>Pro</b></font>: {1}\n<font color='#D3CE6D'><b>TP</b></font>: {2}"
+		"ru"        "<b>Таймер запущен</b>\n<font color='#4A66FC'><b>Pro</b></font>: {1}\n<font color='#D3CE6D'><b>TP</b></font>: {2}"
 	}
 	"TimerStopped"
 	{
@@ -595,9 +615,11 @@
 	}
 	"CheckpointSaved"
 	{
-		"#format"   "{1:c},{2:c},{3:c}"
-		"ru"        "[{1}KZ{2}] {3}Чекпоинт сохранен."
+		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:i},{6:c}"
+		"ru"        "[{1}KZ{2}] {3}Чекпоинт сохранен. {4}#{5}{6}"
 	}
+	
+	"#format"   "{1:c},{2:c},{3:c},{4:c},{5:i},{6:c}"
 	"CheckpointsNotinAir"
 	{
 		"#format"   "{1:c},{2:c},{3:c}"
@@ -633,30 +655,36 @@
 		"#format"   "{1:c},{2:c}"
 		"ru"        "[{1}KZ{2}] Радио команды отключены."
 	}
-	"Jumpstats_LjAll"
+	"Jumpstats_LadderJumpAll"
  	{
 		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c},{10:s}"
-		"ru"        "[{1}KZ{2}] {3}{4}{5} прыгнул {6}{7} юнитов {8}{9} LongJump'ом{10}"
+		"ru"        "[{1}KZ{2}] {3}{4}{5} прыгнул {6}{7} юнитов {8}{9} Ladderjump'ом{10}"
+	}
+	
+	"Jumpstats_LjAll"
+ 	{
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c},{10:s},{11:s}"
+		"ru"        "[{1}KZ{2}] {3}{4}{5} прыгнул {6}{7} юнитов {8}{9} LongJump'ом{10}{11}"
 	}
 	"Jumpstats_BhopAll"
  	{
-		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c}"
-		"ru"        "[{1}KZ{2}] {3}{4}{5} прыгнул {6}{7} юнитов {8}{9} Bunnyhop'ом"
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c},{10:s}"
+		"ru"        "[{1}KZ{2}] {3}{4}{5} прыгнул {6}{7} юнитов {8}{9} Bunnyhop'ом{10}"
 	}
 	"Jumpstats_WeirdAll"
  	{
-		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c}"
-		"ru"        "[{1}KZ{2}] {3}{4}{5} прыгнул {6}{7} юнитов {8}{9} WeirdJump'ом"
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c},{10:s}"
+		"ru"        "[{1}KZ{2}] {3}{4}{5} прыгнул {6}{7} юнитов {8}{9} WeirdJump'ом{10}"
 	}
 	"Jumpstats_DropBhopAll"
  	{
-		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c}"
-		"ru"        "[{1}KZ{2}] {3}{4}{5} прыгнул {6}{7} юнитов {8}{9} DropBhop'ом"
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c},{10:s}"
+		"ru"        "[{1}KZ{2}] {3}{4}{5} прыгнул {6}{7} юнитов {8}{9} DropBhop'ом{10}"
 	}
 	"Jumpstats_MultiBhopAll"
  	{
-		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c}"
-		"ru"        "[{1}KZ{2}] {3}{4}{5} прыгнул {6}{7} юнитов {8}{9} MultiBhop'ом"
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c},{10:s}"
+		"ru"        "[{1}KZ{2}] {3}{4}{5} прыгнул {6}{7} юнитов {8}{9} MultiBhop'ом{10}"
 	}
 	"Jumpstats_OnRampage"
  	{
@@ -667,6 +695,11 @@
  	{
 		"#format"   "{1:c},{2:c},{3:c},{4:s}"
 		"ru"        "[{1}KZ{2}] {3}{4} доминирует [5 элитных прыжков подряд]"
+	}
+	"Jumpstats_BeatLadderJumpBest"
+ 	{
+		"#format"   "{1:c},{2:c},{3:c},{4:.3f}"
+		"ru"        "[{1}KZ{2}] {3}Ты побил свой рекорд по Ladderjump'у с прыжком в {4} юнитов!"
 	}
 	"Jumpstats_BeatLjBest"
  	{
@@ -697,6 +730,11 @@
  	{
 		"#format"   "{1:c},{2:c},{3:c},{4:.3f}"
 		"ru"        "[{1}KZ{2}] {3}Ты побил свой рекорд по Multi-Bunnyhop'у с прыжком в {4} юнитов!"
+	}
+	"Jumpstats_LadderJumpTop"
+ 	{
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:i},{6:.3f}"
+		"ru"        "[{1}KZ{2}] {3}{4} теперь занимает #{5} место в топ 20 по Ladderjump'у! [{6} юнитов]"
 	}
 	"Jumpstats_LjTop"
  	{
@@ -1032,6 +1070,17 @@
 	{
 		"ru"       "Телепорт"
 	}
+	"ClientLadderJump1"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:.2f},{5:c},{6:i},{7:c},{8:c},{9:.0f},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:i},{16:c},{17:c}"
+		"ru"       "[{1}KZ{2}] {3}LadderJump: {4} юнитов [{5}{6}{7} Стрейфа(ов) | {8}{9}{10} Престрейф | {11}{12}{13} Высота | {14}{15}{16}{17} Высота]"
+	}
+	"ClientLadderJump2"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:.2f},{5:c},{6:i},{7:c},{8:c},{9:.0f},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:i},{19:c},{20:c}"
+		"ru"       "[{1}KZ{2}] {3}LadderJump: {4} юнитов [{5}{6}{7} Стрейфа(ов) | {8}{9}{10} Престрейф | {11}{12}{13} Высота | {14}{15}{16} Высота | {17}{18}{19}{20} Синхронизация]"
+	}
+
 	"ClientLongJump1"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:.2f},{5:c},{6:i},{7:c},{8:c},{9:.0f},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:i},{19:c},{20:c},{21:s}"
