--- a/addons/sourcemod/translations/de/kztimer.phrases.txt
+++ b/addons/sourcemod/translations/de/kztimer.phrases.txt
@@ -1,5 +1,50 @@
 ﻿"Phrases"
 {
+	"PlayerJumpBeam1"
+	{
+		"#format"   "{1:c},{2:c}"
+		"de"        "[{1}KZ{2}] Jump beam eingeschaltet."
+	}
+	"PlayerJumpBeam2"
+	{
+		"#format"   "{1:c},{2:c}"
+		"de"        "[{1}KZ{2}] Jump beam ausgeschaltet."
+	}
+	"ClientLadderJump1"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:.2f},{5:c},{6:i},{7:c},{8:c},{9:.0f},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:i},{16:c},{17:c}"
+		"de"       "[{1}KZ{2}] {3}LAJ: {4} units [{5}{6}{7} Strafes | {8}{9}{10} Pre | {11}{12}{13} Höhe | {14}{15}{16}{17} Sync]"
+	}
+	"ClientLadderJump2"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:.2f},{5:c},{6:i},{7:c},{8:c},{9:.0f},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:i},{19:c},{20:c}"
+		"de"       "[{1}KZ{2}] {3}LAJ: {4} units [{5}{6}{7} Strafes | {8}{9}{10} Pre | {11}{12}{13} Max | {14}{15}{16} Höhe | {17}{18}{19}{20} Sync]"
+	}
+	"Jumpstats_LadderJumpTop"
+ 	{
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:i},{6:.3f}"
+		"de"        "[{1}KZ{2}] {3}{4} ist jetzt #{5} in der LadderJump Top 20! [{6} units]"
+	}
+	"Jumpstats_BeatLadderJumpBest"
+ 	{
+		"#format"   "{1:c},{2:c},{3:c},{4:.3f}"
+		"de"        "[{1}KZ{2}] {3}Du hast deine Bestleistung für LadderJump mit einem {4} units Sprung überboten!"
+	}
+	"Jumpstats_LadderJumpAll"
+ 	{
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c},{10:s}"
+		"de"        "[{1}KZ{2}] {3}{4}{5} sprang {6}{7} units{8} mit einem {9}LadderJump{10}"
+	}
+	"AvgTime"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:s},{7:i},{8:c},{9:c},{10:s},{11:i}"
+		"de"        "[{1}KZ{2}] {3}Durchschnittszeit {4}PRO{5}: {6} ({7}) {8}TP{9}: {10} ({11})"
+	}
+	"ClientLongJumpBlockFailstats"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:.2f},{7:c},{8:c},{9:i},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:.0f},{19:c},{20:c},{21:i},{22:c},{23:c},{24:c},{25:.3f},{26:c},{27:s}"
+		"de"       "[{1}KZ{2}] {3}Distance{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Height | {20}{21}{22}{23} Sync | {24}{25}{26} JumpOff Edge]{27}"
+	}
 	"TimerStartReminder"
 	{	
 		"#format"   ""
@@ -27,13 +72,13 @@
 	{
 	
 		"#format"   "{1:s},{2:s}"
-		"de"        "<b>Timer neugestartet</b>\n<font color='#AB79DC'><b>Pro</b></font>: {1}\n<font color='#D3CE6D'><b>TP</b></font>: {2}"
+		"de"        "<b>Timer neugestartet</b>\n<font color='#4A66FC'><b>Pro</b></font>: {1}\n<font color='#D3CE6D'><b>TP</b></font>: {2}"
 	}
 	"TimerStarted2"
 	{
 	
 		"#format"   "{1:s},{2:s}"
-		"de"        "<b>Timer gestartet</b>\n<font color='#AB79DC'><b>Pro</b></font>: {1}\n<font color='#D3CE6D'><b>TP</b></font>: {2}"
+		"de"        "<b>Timer gestartet</b>\n<font color='#4A66FC'><b>Pro</b></font>: {1}\n<font color='#D3CE6D'><b>TP</b></font>: {2}"
 	}
 	"TimerStopped"
 	{
@@ -44,7 +89,7 @@
 	"LJblock1"
 	{
 		"#format"   "{1:c},{2:c},{3:c}"
-		"de"        "[{1}KZ{2}] {3}Ungültiges Ziel (Höhenunterschied erkannt)"
+		"de"        "[{1}KZ{2}] {3}Ungültiges Ziel (Heightnunterschied erkannt)"
 	}
 	"LJblock2"
 	{
@@ -114,7 +159,7 @@
 	"Measure1"
 	{
 		"#format"   "{1:c},{2:c},{3:.1f},{4:.1f}"
-		"de"       "[{1}KZ{2}] Distanz: {3} (Höhenunterschied: {4})"
+		"de"       "[{1}KZ{2}] Distanz: {3} (Heightnunterschied: {4})"
 	}
 	"Measure2"
 	{
@@ -592,8 +637,8 @@
 	}
 	"CheckpointSaved"
 	{
-		"#format"   "{1:c},{2:c},{3:c}"
-		"de"        "[{1}KZ{2}] {3}Checkpoint gespeichert."
+		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:i},{6:c}"
+		"de"        "[{1}KZ{2}] {3}Checkpoint {4}#{5}{6} gespeichert."
 	}
 	"CheckpointsNotinAir"
 	{
@@ -632,28 +677,28 @@
 	}
 	"Jumpstats_LjAll"
  	{
-		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c},{10:s}"
-		"de"        "[{1}KZ{2}] {3}{4}{5} sprang {6}{7} units{8} mit einem {9}LongJump{10}"
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c},{10:s},{11:s}"
+		"de"        "[{1}KZ{2}] {3}{4}{5} sprang {6}{7} units{8} mit einem {9}LongJump{10}{11}"
 	}
 	"Jumpstats_BhopAll"
  	{
-		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c}"
-		"de"        "[{1}KZ{2}] {3}{4}{5} sprang {6}{7} units{8} mit einem {9}Bunnyhop"
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c},{10:s}"
+		"de"        "[{1}KZ{2}] {3}{4}{5} sprang {6}{7} units{8} mit einem {9}Bunnyhop{10}"
 	}
 	"Jumpstats_WeirdAll"
  	{
-		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c}"
-		"de"        "[{1}KZ{2}] {3}{4}{5} sprang {6}{7} units{8} mit einem {9}WeirdJump"
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c},{10:s}"
+		"de"        "[{1}KZ{2}] {3}{4}{5} sprang {6}{7} units{8} mit einem {9}WeirdJump{10}"
 	}
 	"Jumpstats_DropBhopAll"
  	{
-		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c}"
-		"de"        "[{1}KZ{2}] {3}{4}{5} sprang {6}{7} units{8} mit einem {9}DropBhop"
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c},{10:s}"
+		"de"        "[{1}KZ{2}] {3}{4}{5} sprang {6}{7} units{8} mit einem {9}DropBhop{10}"
 	}
 	"Jumpstats_MultiBhopAll"
  	{
-		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c}"
-		"de"        "[{1}KZ{2}] {3}{4}{5} sprang {6}{7} units{8} mit einem {9}MultiBhop"
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c,{10:s}}"
+		"de"        "[{1}KZ{2}] {3}{4}{5} sprang {6}{7} units{8} mit einem {9}MultiBhop{10}"
 	}
 	"Jumpstats_OnRampage"
  	{
@@ -1007,22 +1052,22 @@
 	"ClientLongJump1"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:.2f},{5:c},{6:i},{7:c},{8:c},{9:.0f},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:i},{19:c},{20:c},{21:s}"
-		"de"       "[{1}KZ{2}] {3}LJ: {4} units [{5}{6}{7} Strafes | {8}{9}{10} Pre | {11}{12}{13} Max | {14}{15}{16} Höhe | {17}{18}{19}{20} Sync]{21}"
+		"de"       "[{1}KZ{2}] {3}LJ: {4} units [{5}{6}{7} Strafes | {8}{9}{10} Pre | {11}{12}{13} Max | {14}{15}{16} Height | {17}{18}{19}{20} Sync]{21}"
 	}
 	"ClientLongJump2"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:.2f},{5:c},{6:i},{7:c},{8:c},{9:.0f},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:i},{19:c},{20:c},{21:s}"
-		"de"       "[{1}KZ{2}] {3}LJ: {4} units [{5}{6}{7} Strafes | {8}{9}{10} TakeOff | {11}{12}{13} Max | {14}{15}{16} Höhe | {17}{18}{19}{20} Sync]{21}"
+		"de"       "[{1}KZ{2}] {3}LJ: {4} units [{5}{6}{7} Strafes | {8}{9}{10} TakeOff | {11}{12}{13} Max | {14}{15}{16} Height | {17}{18}{19}{20} Sync]{21}"
 	}
 	"ClientLongJump3"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:.2f},{7:c},{8:c},{9:i},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:.0f},{19:c},{20:c},{21:i},{22:c},{23:c},{24:s}"
-		"de"       "[{1}KZ{2}] {3}LJ{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Höhe | {20}{21}{22}{23} Sync]{24}"
+		"de"       "[{1}KZ{2}] {3}LJ{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Height | {20}{21}{22}{23} Sync]{24}"
 	}
 	"ClientLongJump4"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:.2f},{7:c},{8:c},{9:i},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:.0f},{19:c},{20:c},{21:i},{22:c},{23:c},{24:s}"
-		"de"       "[{1}KZ{2}] {3}LJ{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} TakeOff | {14}{15}{16} Max | {17}{18}{19} Höhe | {20}{21}{22}{23} Sync]{24}"
+		"de"       "[{1}KZ{2}] {3}LJ{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} TakeOff | {14}{15}{16} Max | {17}{18}{19} Height | {20}{21}{22}{23} Sync]{24}"
 	}	
 	"ClientMultiBhop1"
 	{
@@ -1032,37 +1077,37 @@
 	"ClientMultiBhop2"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:.2f},{7:c},{8:c},{9:i},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:.0f},{19:c},{20:c},{21:s},{22:c},{23:c},{24:i},{25:c},{26:c}"
-		"de"       "[{1}KZ{2}] {3}MultiBhop{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Höhe | {20}{21}{22} Bhops | {23}{24}{25}{26} Sync]"
+		"de"       "[{1}KZ{2}] {3}MultiBhop{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Height | {20}{21}{22} Bhops | {23}{24}{25}{26} Sync]"
 	}
 	"ClientDropBhop1"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:.2f},{5:c},{6:i},{7:c},{8:c},{9:.0f},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:i},{16:c},{17:c}"
-		"de"       "[{1}KZ{2}] {3}DropBhop: {4} units [{5}{6}{7} Strafes | {8}{9}{10} Pre | {11}{12}{13} Höhe | {14}{15}{16}{17} Sync]"
+		"de"       "[{1}KZ{2}] {3}DropBhop: {4} units [{5}{6}{7} Strafes | {8}{9}{10} Pre | {11}{12}{13} Height | {14}{15}{16}{17} Sync]"
 	}
 	"ClientDropBhop2"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:.2f},{7:c},{8:c},{9:i},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:.0f},{19:c},{20:c},{21:i},{22:c},{23:c}"
-		"de"       "[{1}KZ{2}] {3}DropBhop{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Höhe | {20}{21}{22}{23} Sync]"
+		"de"       "[{1}KZ{2}] {3}DropBhop{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Height | {20}{21}{22}{23} Sync]"
 	}
 	"ClientWeirdJump1"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:.2f},{5:c},{6:i},{7:c},{8:c},{9:.0f},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:i},{16:c},{17:c}"
-		"de"       "[{1}KZ{2}] {3}WJ: {4} units [{5}{6}{7} Strafes | {8}{9}{10} Pre | {11}{12}{13} Höhe | {14}{15}{16}{17} Sync]"
+		"de"       "[{1}KZ{2}] {3}WJ: {4} units [{5}{6}{7} Strafes | {8}{9}{10} Pre | {11}{12}{13} Height | {14}{15}{16}{17} Sync]"
 	}
 	"ClientWeirdJump2"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:.2f},{7:c},{8:c},{9:i},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:.0f},{19:c},{20:c},{21:i},{22:c},{23:c}"
-		"de"       "[{1}KZ{2}] {3}WJ{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Höhe | {20}{21}{22}{23} Sync]"
+		"de"       "[{1}KZ{2}] {3}WJ{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Height | {20}{21}{22}{23} Sync]"
 	}
 	"ClientBunnyhop1"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:.2f},{5:c},{6:i},{7:c},{8:c},{9:.0f},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:i},{16:c},{17:c}"
-		"de"       "[{1}KZ{2}] {3}Bhop: {4} units [{5}{6}{7} Strafes | {8}{9}{10} Pre | {11}{12}{13} Höhe | {14}{15}{16}{17} Sync]"
+		"de"       "[{1}KZ{2}] {3}Bhop: {4} units [{5}{6}{7} Strafes | {8}{9}{10} Pre | {11}{12}{13} Height | {14}{15}{16}{17} Sync]"
 	}
 	"ClientBunnyhop2"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:.2f},{7:c},{8:c},{9:i},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:.0f},{19:c},{20:c},{21:i},{22:c},{23:c}"
-		"de"       "[{1}KZ{2}] {3}Bhop{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Höhe | {20}{21}{22}{23} Sync]"
+		"de"       "[{1}KZ{2}] {3}Bhop{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Height | {20}{21}{22}{23} Sync]"
 	}
 	"LanguageSwitch"
 	{
