--- a/addons/sourcemod/translations/fr/kztimer.phrases.txt
+++ b/addons/sourcemod/translations/fr/kztimer.phrases.txt
@@ -1,5 +1,25 @@
 ﻿"Phrases"
 {
+	"PlayerJumpBeam1"
+	{
+		"#format"   "{1:c},{2:c}"
+		"fr"        "[{1}KZ{2}] Jump beam activé."
+	}
+	"PlayerJumpBeam2"
+	{
+		"#format"   "{1:c},{2:c}"
+		"fr"        "[{1}KZ{2}] Jump beam désactivé."
+	}
+	"AvgTime"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:s},{7:i},{8:c},{9:c},{10:s},{11:i}"
+		"fr"        "[{1}KZ{2}] {3}Avg. time {4}PRO{5}: {6} ({7}) {8}TP{9}: {10} ({11})"
+	}
+	"ClientLongJumpBlockFailstats"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:.2f},{7:c},{8:c},{9:i},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:.0f},{19:c},{20:c},{21:i},{22:c},{23:c},{24:c},{25:.3f},{26:c},{27:s}"
+		"fr"       "[{1}KZ{2}] {3}Distance{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Height | {20}{21}{22}{23} Sync | {24}{25}{26} JumpOff Edge]{27}"
+	}
 	"TimerStartReminder"
 	{	
 		"#format"   ""
@@ -27,13 +47,13 @@
 	{
 	
 		"#format"   "{1:s},{2:s}"
-		"fr"        "<b>Chronomètre redémarré</b>\n<font color='#AB79DC'><b>Pro</b></font>: {1}\n<font color='#D3CE6D'><b>TP</b></font>: {2}"
+		"fr"        "<b>Chronomètre redémarré</b>\n<font color='#4A66FC'><b>Pro</b></font>: {1}\n<font color='#D3CE6D'><b>TP</b></font>: {2}"
 	}
 	"TimerStarted2"
 	{
 	
 		"#format"   "{1:s},{2:s}"
-		"fr"        "<b>Chronomètre démarré</b>\n<font color='#AB79DC'><b>Pro</b></font>: {1}\n<font color='#D3CE6D'><b>TP</b></font>: {2}"
+		"fr"        "<b>Chronomètre démarré</b>\n<font color='#4A66FC'><b>Pro</b></font>: {1}\n<font color='#D3CE6D'><b>TP</b></font>: {2}"
 	}
 	"TimerStopped"
 	{
@@ -562,8 +582,8 @@
 	}
 	"CheckpointSaved"
 	{
-		"#format"   "{1:c},{2:c},{3:c}"
-		"fr"        "[{1}KZ{2}] {3}Checkpoint sauvegardé."
+		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:i},{6:c}"
+		"fr"        "[{1}KZ{2}] {3}Checkpoint {4}#{5}{6} sauvegardé."
 	}
 	"CheckpointsNotinAir"
 	{
@@ -600,30 +620,37 @@
 		"#format"   "{1:c},{2:c}"
 		"fr"        "[{1}KZ{2}] Les commandes radios ont été désactivées."
 	}
-	"Jumpstats_LjAll"
+	
+	"Jumpstats_LadderJumpAll"
  	{
 		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c},{10:s}"
-		"fr"        "[{1}KZ{2}] {3}{4}{5} a sauté {6}{7} units{8} avec un {9}LongJump{10}"
+		"fr"        "[{1}KZ{2}] {3}{4}{5} a sauté {6}{7} units{8} avec un {9}LadderJump{10}"
+	}
+	
+	"Jumpstats_LjAll"
+ 	{
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c},{10:s}{11:s}"
+		"fr"        "[{1}KZ{2}] {3}{4}{5} a sauté {6}{7} units{8} avec un {9}LongJump{10}{11}"
 	}
 	"Jumpstats_BhopAll"
  	{
-		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c}"
-		"fr"        "[{1}KZ{2}] {3}{4}{5} a sauté {6}{7} units{8} avec un {9}Bunnyhop"
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c},{10:s}"
+		"fr"        "[{1}KZ{2}] {3}{4}{5} a sauté {6}{7} units{8} avec un {9}Bunnyhop{10}"
 	}
 	"Jumpstats_WeirdAll"
  	{
-		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c}"
-		"fr"        "[{1}KZ{2}] {3}{4}{5} a sauté {6}{7} units{8} avec un {9}WeirdJump"
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c},{10:s}"
+		"fr"        "[{1}KZ{2}] {3}{4}{5} a sauté {6}{7} units{8} avec un {9}WeirdJump{10}"
 	}
 	"Jumpstats_DropBhopAll"
  	{
-		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c}"
-		"fr"        "[{1}KZ{2}] {3}{4}{5} a sauté {6}{7} units{8} avec un {9}DropBhop"
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c},{10:s}"
+		"fr"        "[{1}KZ{2}] {3}{4}{5} a sauté {6}{7} units{8} avec un {9}DropBhop{10}"
 	}
 	"Jumpstats_MultiBhopAll"
  	{
-		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c}"
-		"fr"        "[{1}KZ{2}] {3}{4}{5} a sauté {6}{7} units{8} avec un {9}MultiBhop"
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c},{10:s}"
+		"fr"        "[{1}KZ{2}] {3}{4}{5} a sauté {6}{7} units{8} avec un {9}MultiBhop{10}"
 	}
 	"Jumpstats_OnRampage"
  	{
@@ -634,6 +661,11 @@
  	{
 		"#format"   "{1:c},{2:c},{3:c},{4:s}"
 		"fr"        "[{1}KZ{2}] {3}{4} est inarrêtable [5 sauts spectaculaires d'affilés]"
+	}
+	"Jumpstats_BeatLadderJumpBest"
+ 	{
+		"#format"   "{1:c},{2:c},{3:c},{4:.3f}"
+		"fr"        "[{1}KZ{2}] {3}Vous avez battu votre record de LadderJump avec un saut de {4}!"
 	}
 	"Jumpstats_BeatLjBest"
  	{
@@ -664,6 +696,11 @@
  	{
 		"#format"   "{1:c},{2:c},{3:c},{4:.3f}"
 		"fr"        "[{1}KZ{2}] {3}Vous avez battu votre record de Multi-Bunnyhop avec un saut de {4}!"
+	}
+	"Jumpstats_LadderJumpTop"
+ 	{
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:i},{6:.3f}"
+		"fr"        "[{1}KZ{2}] {3}{4} est désormais #{5} dans le Top 20 LadderJump! [{6} units]"
 	}
 	"Jumpstats_LjTop"
  	{
@@ -973,26 +1010,36 @@
 	"ClimbersMenu14"
 	{
 		"fr"       "TP"
-	}		
+	}	
+	"ClientLadderJump1"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:.2f},{5:c},{6:i},{7:c},{8:c},{9:.0f},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:i},{16:c},{17:c}"
+		"fr"       "[{1}KZ{2}] {3}LAJ: {4} units [{5}{6}{7} Strafes | {8}{9}{10} Pre | {11}{12}{13} Height | {14}{15}{16}{17} Sync]"
+	}
+	"ClientLadderJump2"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:.2f},{5:c},{6:i},{7:c},{8:c},{9:.0f},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:i},{19:c},{20:c}"
+		"fr"       "[{1}KZ{2}] {3}LAJ: {4} units [{5}{6}{7} Strafes | {8}{9}{10} Pre | {11}{12}{13} Max | {14}{15}{16} Height | {17}{18}{19}{20} Sync]"
+	}	
 	"ClientLongJump1"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:.2f},{5:c},{6:i},{7:c},{8:c},{9:.0f},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:i},{19:c},{20:c},{21:s}"
-		"fr"       "[{1}KZ{2}] {3}LJ: {4} units [{5}{6}{7} Strafes | {8}{9}{10} Pre | {11}{12}{13} Max | {14}{15}{16} Hauteur | {17}{18}{19}{20} Sync]{21}"
+		"fr"       "[{1}KZ{2}] {3}LJ: {4} units [{5}{6}{7} Strafes | {8}{9}{10} Pre | {11}{12}{13} Max | {14}{15}{16} Height | {17}{18}{19}{20} Sync]{21}"
 	}
 	"ClientLongJump2"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:.2f},{5:c},{6:i},{7:c},{8:c},{9:.0f},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:i},{19:c},{20:c},{21:s}"
-		"fr"       "[{1}KZ{2}] {3}LJ: {4} units [{5}{6}{7} Strafes | {8}{9}{10} TakeOff | {11}{12}{13} Max | {14}{15}{16} Hauteur | {17}{18}{19}{20} Sync]{21}"
+		"fr"       "[{1}KZ{2}] {3}LJ: {4} units [{5}{6}{7} Strafes | {8}{9}{10} TakeOff | {11}{12}{13} Max | {14}{15}{16} Height | {17}{18}{19}{20} Sync]{21}"
 	}
 	"ClientLongJump3"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:.2f},{7:c},{8:c},{9:i},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:.0f},{19:c},{20:c},{21:i},{22:c},{23:c},{24:s}"
-		"fr"       "[{1}KZ{2}] {3}LJ{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Hauteur | {20}{21}{22}{23} Sync]{24}"
+		"fr"       "[{1}KZ{2}] {3}LJ{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Height | {20}{21}{22}{23} Sync]{24}"
 	}
 	"ClientLongJump4"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:.2f},{7:c},{8:c},{9:i},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:.0f},{19:c},{20:c},{21:i},{22:c},{23:c},{24:s}"
-		"fr"       "[{1}KZ{2}] {3}LJ{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} TakeOff | {14}{15}{16} Max | {17}{18}{19} Hauteur | {20}{21}{22}{23} Sync]{24}"
+		"fr"       "[{1}KZ{2}] {3}LJ{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} TakeOff | {14}{15}{16} Max | {17}{18}{19} Height | {20}{21}{22}{23} Sync]{24}"
 	}	
 	"ClientMultiBhop1"
 	{
@@ -1002,37 +1049,37 @@
 	"ClientMultiBhop2"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:.2f},{7:c},{8:c},{9:i},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:.0f},{19:c},{20:c},{21:s},{22:c},{23:c},{24:i},{25:c},{26:c}"
-		"fr"       "[{1}KZ{2}] {3}MultiBhop{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Hauteur | {20}{21}{22} Bhops | {23}{24}{25}{26} Sync]"
+		"fr"       "[{1}KZ{2}] {3}MultiBhop{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Height | {20}{21}{22} Bhops | {23}{24}{25}{26} Sync]"
 	}
 	"ClientDropBhop1"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:.2f},{5:c},{6:i},{7:c},{8:c},{9:.0f},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:i},{16:c},{17:c}"
-		"fr"       "[{1}KZ{2}] {3}DropBhop: {4} units [{5}{6}{7} Strafes | {8}{9}{10} Pre | {11}{12}{13} Hauteur | {14}{15}{16}{17} Sync]"
+		"fr"       "[{1}KZ{2}] {3}DropBhop: {4} units [{5}{6}{7} Strafes | {8}{9}{10} Pre | {11}{12}{13} Height | {14}{15}{16}{17} Sync]"
 	}
 	"ClientDropBhop2"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:.2f},{7:c},{8:c},{9:i},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:.0f},{19:c},{20:c},{21:i},{22:c},{23:c}"
-		"fr"       "[{1}KZ{2}] {3}DropBhop{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Hauteur | {20}{21}{22}{23} Sync]"
+		"fr"       "[{1}KZ{2}] {3}DropBhop{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Height | {20}{21}{22}{23} Sync]"
 	}
 	"ClientWeirdJump1"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:.2f},{5:c},{6:i},{7:c},{8:c},{9:.0f},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:i},{16:c},{17:c}"
-		"fr"       "[{1}KZ{2}] {3}WJ: {4} units [{5}{6}{7} Strafes | {8}{9}{10} Pre | {11}{12}{13} Hauteur | {14}{15}{16}{17} Sync]"
+		"fr"       "[{1}KZ{2}] {3}WJ: {4} units [{5}{6}{7} Strafes | {8}{9}{10} Pre | {11}{12}{13} Height | {14}{15}{16}{17} Sync]"
 	}
 	"ClientWeirdJump2"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:.2f},{7:c},{8:c},{9:i},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:.0f},{19:c},{20:c},{21:i},{22:c},{23:c}"
-		"fr"       "[{1}KZ{2}] {3}WJ{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Hauteur | {20}{21}{22}{23} Sync]"
+		"fr"       "[{1}KZ{2}] {3}WJ{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Height | {20}{21}{22}{23} Sync]"
 	}
 	"ClientBunnyhop1"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:.2f},{5:c},{6:i},{7:c},{8:c},{9:.0f},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:i},{16:c},{17:c}"
-		"fr"       "[{1}KZ{2}] {3}Bhop: {4} units [{5}{6}{7} Strafes | {8}{9}{10} Pre | {11}{12}{13} Hauteur | {14}{15}{16}{17} Sync]"
+		"fr"       "[{1}KZ{2}] {3}Bhop: {4} units [{5}{6}{7} Strafes | {8}{9}{10} Pre | {11}{12}{13} Height | {14}{15}{16}{17} Sync]"
 	}
 	"ClientBunnyhop2"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:.2f},{7:c},{8:c},{9:i},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:.0f},{19:c},{20:c},{21:i},{22:c},{23:c}"
-		"fr"       "[{1}KZ{2}] {3}Bhop{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Hauteur | {20}{21}{22}{23} Sync]"
+		"fr"       "[{1}KZ{2}] {3}Bhop{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Height | {20}{21}{22}{23} Sync]"
 	}
 	"ProRecord"
 	{
