--- a/addons/sourcemod/translations/kztimer.phrases.txt
+++ b/addons/sourcemod/translations/kztimer.phrases.txt
@@ -1,5 +1,45 @@
 ﻿"Phrases"
 {
+	"PlayerJumpBeam1"
+	{
+		"#format"   "{1:c},{2:c}"
+		"en"        "[{1}KZ{2}] Jump beam enabled."
+	}
+	"PlayerJumpBeam2"
+	{
+		"#format"   "{1:c},{2:c}"
+		"en"        "[{1}KZ{2}] Jump beam disabled."
+	}
+	"ClientLadderJump1"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:.2f},{5:c},{6:i},{7:c},{8:c},{9:.0f},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:i},{16:c},{17:c}"
+		"en"       "[{1}KZ{2}] {3}LAJ: {4} units [{5}{6}{7} Strafes | {8}{9}{10} Pre | {11}{12}{13} Height | {14}{15}{16}{17} Sync]"
+	}
+	"ClientLadderJump2"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:.2f},{7:c},{8:c},{9:i},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:.0f},{19:c},{20:c},{21:i},{22:c},{23:c}"
+		"en"       "[{1}KZ{2}] {3}LAJ{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Height | {20}{21}{22}{23} Sync]"
+	}
+	"Jumpstats_LadderJumpTop"
+ 	{
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:i},{6:.3f}"
+		"en"        "[{1}KZ{2}] {3}{4} is now #{5} in the LadderJump Top 20! [{6} units]"
+	}
+	"Jumpstats_BeatLadderJumpBest"
+ 	{
+		"#format"   "{1:c},{2:c},{3:c},{4:.3f}"
+		"en"        "[{1}KZ{2}] {3}You beat your personal best for LadderJump with a {4} jump!"
+	}
+	"Jumpstats_LadderJumpAll"
+ 	{
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c},{10:s}"
+		"en"        "[{1}KZ{2}] {3}{4}{5} jumped {6}{7} units{8} with a {9}LadderJump{10}"
+	}
+	"AvgTime"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:s},{7:i},{8:c},{9:c},{10:s},{11:i}"
+		"en"        "[{1}KZ{2}] {3}Avg. time {4}PRO{5}: {6} ({7}) {8}TP{9}: {10} ({11})"
+	}
 	"TimerStartReminder"
 	{	
 		"#format"   ""
@@ -27,13 +67,13 @@
 	{
 	
 		"#format"   "{1:s},{2:s}"
-		"en"        "<b>Timer restarted</b>\n<font color='#AB79DC'><b>Pro</b></font>: {1}\n<font color='#D3CE6D'><b>TP</b></font>: {2}"
+		"en"        "<b>Timer restarted</b>\n<font color='#4A66FC'><b>Pro</b></font>: {1}\n<font color='#D3CE6D'><b>TP</b></font>: {2}"
 	}
 	"TimerStarted2"
 	{
 	
 		"#format"   "{1:s},{2:s}"
-		"en"        "<b>Timer started</b>\n<font color='#AB79DC'><b>Pro</b></font>: {1}\n<font color='#D3CE6D'><b>TP</b></font>: {2}"
+		"en"        "<b>Timer started</b>\n<font color='#4A66FC'><b>Pro</b></font>: {1}\n<font color='#D3CE6D'><b>TP</b></font>: {2}"
 	}
 	"TimerStopped"
 	{
@@ -298,7 +338,7 @@
 	"BotAlreadyCreated"
 	{
 		"#format"   "{1:c},{2:c}"
-		"en"        "[{1}KZ{2}] Replay bot already created."
+		"en"        "[{1}KZ{2}] Replay bot already spawned."
 	}
 	"NoPlayerTop"
 	{
@@ -338,27 +378,27 @@
 	"NewGlobalRecord102"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c}"
-		"en"        "[{1}KZ{2}] {3}{4}{5} scored a new {6}GLOBAL RECORD (102)"
+		"en"        "[{1}KZ{2}] {3}{4}{5} has beaten the {6}GLOBAL RECORD (102)"
 	}
 	"NewGlobalRecord128"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c}"
-		"en"        "[{1}KZ{2}] {3}{4}{5} scored a new {6}GLOBAL RECORD (128)"
+		"en"        "[{1}KZ{2}] {3}{4}{5} has beaten the {6}GLOBAL RECORD"
 	}
 	"NewGlobalRecord"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c}"
-		"en"        "[{1}KZ{2}] {3}{4}{5} scored a new {6}GLOBAL RECORD (64)"
+		"en"        "[{1}KZ{2}] {3}{4}{5} has beaten the {6}GLOBAL RECORD (64)"
 	}
 	"NewProRecord"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c}"
-		"en"        "[{1}KZ{2}] {3}{4}{5} scored a new {6}PRO RECORD"
+		"en"        "[{1}KZ{2}] {3}{4}{5} has beaten the {6}PRO RECORD"
 	}
 	"NewTpRecord"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c}"
-		"en"        "[{1}KZ{2}] {3}{4}{5} scored a new {6}TP RECORD"
+		"en"        "[{1}KZ{2}] {3}{4}{5} has beaten the {6}TP RECORD"
 	}
 	"ReplayFinishingMsg"
 	{
@@ -403,7 +443,7 @@
 	"PlayerNotFound"
 	{
 		"#format"   "{1:c},{2:c},{3:s}"
-		"en"        "[{1}KZ{2}] Player {3} not found in local database."
+		"en"        "[{1}KZ{2}] Player {3} not found."
 	}
 	"ConsoleOutput"
 	{
@@ -508,7 +548,7 @@
 	"Goto4"
 	{
 		"#format"   "{1:c},{2:c},{3:s}"
-		"en"        "[{1}KZ{2}] Player {3} not found!"
+		"en"        "[{1}KZ{2}] Player {3} not found."
 	}
 	"Goto5"
 	{
@@ -562,8 +602,8 @@
 	}
 	"CheckpointSaved"
 	{
-		"#format"   "{1:c},{2:c},{3:c}"
-		"en"        "[{1}KZ{2}] {3}Checkpoint saved."
+		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:i},{6:c}"
+		"en"        "[{1}KZ{2}] {3}Checkpoint {4}#{5}{6} saved."
 	}
 	"CheckpointsNotinAir"
 	{
@@ -602,28 +642,28 @@
 	}
 	"Jumpstats_LjAll"
  	{
-		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c},{10:s}"
-		"en"        "[{1}KZ{2}] {3}{4}{5} jumped {6}{7} units{8} with a {9}LongJump{10}"
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c},{10:s},{11:s}"
+		"en"        "[{1}KZ{2}] {3}{4}{5} jumped {6}{7} units{8} with a {9}LongJump{10}{11}"
 	}
 	"Jumpstats_BhopAll"
  	{
-		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c}"
-		"en"        "[{1}KZ{2}] {3}{4}{5} jumped {6}{7} units{8} with a {9}Bunnyhop"
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c},{10:s}"
+		"en"        "[{1}KZ{2}] {3}{4}{5} jumped {6}{7} units{8} with a {9}Bunnyhop{10}"
 	}
 	"Jumpstats_WeirdAll"
  	{
-		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c}"
-		"en"        "[{1}KZ{2}] {3}{4}{5} jumped {6}{7} units{8} with a {9}WeirdJump"
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c},{10:s}"
+		"en"        "[{1}KZ{2}] {3}{4}{5} jumped {6}{7} units{8} with a {9}WeirdJump{10}"
 	}
 	"Jumpstats_DropBhopAll"
  	{
-		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c}"
-		"en"        "[{1}KZ{2}] {3}{4}{5} jumped {6}{7} units{8} with a {9}DropBhop"
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c},{10:s}"
+		"en"        "[{1}KZ{2}] {3}{4}{5} jumped {6}{7} units{8} with a {9}DropBhop{10}"
 	}
 	"Jumpstats_MultiBhopAll"
  	{
-		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c}"
-		"en"        "[{1}KZ{2}] {3}{4}{5} jumped {6}{7} units{8} with a {9}MultiBhop"
+		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:c},{6:c},{7:.3f},{8:c},{9:c},{10:s}"
+		"en"        "[{1}KZ{2}] {3}{4}{5} jumped {6}{7} units{8} with a {9}MultiBhop{10}"
 	}
 	"Jumpstats_OnRampage"
  	{
@@ -665,6 +705,7 @@
 		"#format"   "{1:c},{2:c},{3:c},{4:.3f}"
 		"en"        "[{1}KZ{2}] {3}You beat your personal best for Multi-Bunnyhop with a {4} jump!"
 	}
+	
 	"Jumpstats_LjTop"
  	{
 		"#format"   "{1:c},{2:c},{3:c},{4:s},{5:i},{6:.3f}"
@@ -973,6 +1014,11 @@
 	"ClimbersMenu14"
 	{
 		"en"       "TP"
+	}
+	"ClientLongJumpBlockFailstats"
+	{
+		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:.2f},{7:c},{8:c},{9:i},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:.0f},{19:c},{20:c},{21:i},{22:c},{23:c},{24:c},{25:.3f},{26:c},{27:s}"
+		"en"       "[{1}KZ{2}] {3}Distance{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} Pre | {14}{15}{16} Max | {17}{18}{19} Height | {20}{21}{22}{23} Sync | {24}{25}{26} JumpOff Edge]{27}"
 	}	
 	"ClientLongJump1"
 	{
@@ -982,7 +1028,7 @@
 	"ClientLongJump2"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:.2f},{5:c},{6:i},{7:c},{8:c},{9:.0f},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:i},{19:c},{20:c},{21:s}"
-		"en"       "[{1}KZ{2}] {3}LJ: {4} units [{5}{6}{7} Strafes | {8}{9}{10} TakeOff | {11}{12}{13} Max | {14}{15}{16} Height | {17}{18}{19}{20} Sync]{21}"
+		"en"       "[{1}KZ{2}] {3}LJ: {4} units [{5}{6}{7} Strafes | {8}{9}{10} JumpOff | {11}{12}{13} Max | {14}{15}{16} Height | {17}{18}{19}{20} Sync]{21}"
 	}
 	"ClientLongJump3"
 	{
@@ -992,7 +1038,7 @@
 	"ClientLongJump4"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:c},{6:.2f},{7:c},{8:c},{9:i},{10:c},{11:c},{12:.0f},{13:c},{14:c},{15:.0f},{16:c},{17:c},{18:.0f},{19:c},{20:c},{21:i},{22:c},{23:c},{24:s}"
-		"en"       "[{1}KZ{2}] {3}LJ{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} TakeOff | {14}{15}{16} Max | {17}{18}{19} Height | {20}{21}{22}{23} Sync]{24}"
+		"en"       "[{1}KZ{2}] {3}LJ{4}: {5}{6} units{7} [{8}{9}{10} Strafes | {11}{12}{13} JumpOff | {14}{15}{16} Max | {17}{18}{19} Height | {20}{21}{22}{23} Sync]{24}"
 	}	
 	"ClientMultiBhop1"
 	{
@@ -1057,7 +1103,7 @@
 	"GlobalRecord3"
 	{
 		"#format"   "{1:c},{2:c},{3:c},{4:c},{5:s},{6:s}"
-		"en"        "[{1}KZ{2}] {3}GLOBAL RECORD (128){4}: {5} ({6})"
+		"en"        "[{1}KZ{2}] {3}GLOBAL RECORD{4}: {5} ({6})"
 	}
 	"GlobalRecord4"
 	{
