--- a/addons/sourcemod/translations/de/kztimer.phrases.txt
+++ b/addons/sourcemod/translations/de/kztimer.phrases.txt
@@ -1,5 +1,25 @@
 ﻿"Phrases"
 {
+	"HideChat1"
+	{
+		"#format"   "{1:c},{2:c}"
+		"de"        "[{1}KZ{2}] Hide chat eingeblendet."
+	}
+	"HideChat2"
+	{
+		"#format"   "{1:c},{2:c}"
+		"de"        "[{1}KZ{2}] Hide chat ausgeblendet."
+	}
+	"HideViewModel1"
+	{
+		"#format"   "{1:c},{2:c}"
+		"de"        "[{1}KZ{2}] Waffe ausgeblendet."
+	}
+	"HideViewModel2"
+	{
+		"#format"   "{1:c},{2:c}"
+		"de"        "[{1}KZ{2}]  Waffe eingeblendet."
+	}
 	"PlayerJumpBeam1"
 	{
 		"#format"   "{1:c},{2:c}"
