--- a/addons/sourcemod/translations/sv/kztimer.phrases.txt
+++ b/addons/sourcemod/translations/sv/kztimer.phrases.txt
@@ -1,5 +1,25 @@
 ﻿"Phrases"
 {
+	"HideChat1"
+	{
+		"#format"   "{1:c},{2:c}"
+		"sv"        "[{1}KZ{2}] Hide chat aktiverat."
+	}
+	"HideChat2"
+	{
+		"#format"   "{1:c},{2:c}"
+		"sv"        "[{1}KZ{2}] Hide chat avaktiverad."
+	}
+	"HideViewModel1"
+	{
+		"#format"   "{1:c},{2:c}"
+		"sv"        "[{1}KZ{2}] Weapon viewmodel avaktiverad."
+	}
+	"HideViewModel2"
+	{
+		"#format"   "{1:c},{2:c}"
+		"sv"        "[{1}KZ{2}] Weapon viewmodel aktiverat."
+	}
 	"PlayerJumpBeam1"
 	{
 		"#format"   "{1:c},{2:c}"
